# playing-with-quicksilver

./: .doit.db.bak  .doit.db.dir  .gitignore  README.md  conf.py  deploy.sh  gatsby-config.js  gatsby-node.js  hugo.toml  netlify.toml  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt
blog/: first-post.mdx  second_post.mdx  this-is-mine.md
blog/my-nerdy-origin-story/: index.mdx
blog/my_nerdy_origin_story/: my_nerdy_origin_story.mdx
blog/second-post/: index.mdx
blog/this-is-mine/: index.mdx
content/: _index.md
content/posts/: _index.md  amanda-neil-a-horror-story-in-romance-form.md  cynical.md  eff-kiwi-farm-stance-is-wrong.md  everything-is-terrible-because-humans-suck.md  feel-good-by-doing-good.md  i-am-so-done-with-the-masking-policy-issue.md  substack-considered-harmful.md  the-only-winning-move-is-not-to-play.md  this-is-mine.md  (+1 more)
layouts/: index.html  index.rss.xml
playing-with-quicksilver/: .doit.db.bak  .doit.db.dir  conf.py
posts/: 2023-is-the-year-of-gratitude.rst  amanda-neil-a-horror-story-in-romance-form.md  cynical.md  eff-kiwi-farm-stance-is-wrong.md  everything-is-terrible-because-humans-suck.md  feel-good-by-doing-good.md  i-am-so-done-with-the-masking-policy-issue.md  reading-science-fiction-is-a-superpower.md  substack-considered-harmful.md  the-only-winning-move-is-not-to-play.md  this-is-mine.md  two-years-of-lockdown-aaaaand-now-covid-19.md
sample-post/: index.mdx
scripts/: convert_nikola_to_hugo.py  generate_legacy_feeds.py
src/: misc-styles.css
src/pages/: about.js  (+3 more)
templates/: base.tmpl
(+13 files in other folders)
